<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAddressDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/address_details"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivDeleteAddressField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAddressDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvAddressDetails"
        app:srcCompat="@drawable/delete_icon" />


    <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/til_hno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddressDetails"
            android:clipToPadding="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_hno"
                android:layout_width="match_parent"
                android:background="@null"
                android:layout_height="wrap_content"
                android:hint="@string/house_no"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"
                android:textSize="@dimen/eighteen_sp"
                android:textColorHint="@color/teal_700"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/til_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_hno"
            android:clipToPadding="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_area"
                android:layout_width="match_parent"
                android:background="@null"
                android:layout_height="wrap_content"
                android:hint="@string/area"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"
                android:textSize="@dimen/eighteen_sp"
                android:textColorHint="@color/teal_700"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/til_pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_area"
            android:clipToPadding="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pincode"
                android:layout_width="match_parent"
                android:background="@null"
                android:layout_height="wrap_content"
                android:hint="@string/pincode"
                android:inputType="number"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:textSize="@dimen/eighteen_sp"
                android:textColorHint="@color/teal_700"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/til_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_pincode"
            android:clipToPadding="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_city"
                android:layout_width="match_parent"
                android:background="@null"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:textSize="@dimen/eighteen_sp"
                android:textColorHint="@color/teal_700"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/til_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_city"
            android:clipToPadding="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_state"
                android:layout_width="match_parent"
                android:background="@null"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:textSize="@dimen/eighteen_sp"
                android:textColorHint="@color/teal_700"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>





</androidx.constraintlayout.widget.ConstraintLayout>